--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,12 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/homepage.css">
 </head>
 
 <body>
     <div class="main">
-        <div class="nav-main"></div>
+        <div class="nav-main">
+            <div class="icon-title">
+
+                <img src="../static/images/homepage/unnamed.webp" class="nav-icon" alt="" srcset="">
+                <span class="nav-title">Youtube Manager</span>
+            </div>
+        </div>
         <div class="sidebar-main"></div>
         <div class="body-main"></div>
     </div>
