--- a/src/pages/comments.html
+++ b/src/pages/comments.html
@@ -17,8 +17,10 @@
             src="/src/static/images/comments/316283970_450570717221604_8751096789457175564_n.jpg"
             alt="thumbnail"
           />
-          <h3 class="vide-title">This is Video</h3>
-          <div class="description"></div>
+          <div class="description">
+          <span class="vide-title">Tech Storm 2.23</span>
+          <span class="info">Fasten your seatbelts to hop into the journey of Kolkata's one of the biggest techfest.....</span>
+          </div>
         </div>
       </div>
     </div>
