--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/homepage.css">
 </head>
@@ -18,8 +19,45 @@
                 <img src="../static/images/homepage/unnamed.webp" class="nav-icon" alt="" srcset="">
                 <span class="nav-title">Youtube Manager</span>
             </div>
+            <div class="nav-routes">
+                <div class="revenue">Manage Revenue</div>
+                <div class="viewers">Manage Viewers</div>
+                <div class="videos">Analyze Videos</div>
+                <div class="subscribers">Subscribers</div>
+            </div>
+            <div class="message-icon">
+                <span class="material-icons"
+                    style="color:#1a73e8;font-size: 2rem;text-shadow: 2px 2px 3px rgb(209, 209, 209);cursor: pointer;">
+                    chat_bubble_outline
+                </span>
+            </div>
         </div>
-        <div class="sidebar-main"></div>
+        <div class="sidebar-main">
+            
+            <div>
+
+                <span class="material-icons">
+                    manage_accounts
+                </span>
+                <h6>Manage Account</h6>
+            </div>
+            <div>
+
+                <span class="material-icons">
+                    search
+                </span>
+                <h6>Subscribers</h6>
+            </div>
+            <div>
+
+                <span class="material-icons">
+                    logout
+                </span>
+                <h6>Logout</h6>
+            </div>
+
+
+        </div>
         <div class="body-main"></div>
     </div>
 </body>
