navbar and sidebar generated from js

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -13,53 +13,15 @@
 
 <body>
     <div class="main">
-        <div class="nav-main">
-            <div class="icon-title">
-
-                <img src="../static/images/homepage/unnamed.webp" class="nav-icon" alt="" srcset="">
-                <span class="nav-title">Youtube Manager</span>
-            </div>
-            <div class="nav-routes">
-                <div class="revenue">Manage Revenue</div>
-                <div class="viewers">Manage Viewers</div>
-                <div class="videos">Analyze Videos</div>
-                <div class="subscribers">Subscribers</div>
-            </div>
-            <div class="message-icon">
-                <span class="material-icons"
-                    style="color:#1a73e8;font-size: 2rem;text-shadow: 2px 2px 3px rgb(209, 209, 209);cursor: pointer;">
-                    chat_bubble_outline
-                </span>
-            </div>
-        </div>
-        <div class="sidebar-main">
+        <div class="nav-main" id="nav-main">
             
-            <div>
-
-                <span class="material-icons">
-                    manage_accounts
-                </span>
-                <h6>Manage Account</h6>
-            </div>
-            <div>
-
-                <span class="material-icons">
-                    search
-                </span>
-                <h6>Subscribers</h6>
-            </div>
-            <div>
-
-                <span class="material-icons">
-                    logout
-                </span>
-                <h6>Logout</h6>
-            </div>
-
-
+        </div>
+        <div class="sidebar-main" id="sidebar-main">
+            
         </div>
         <div class="body-main"></div>
     </div>
+    <script src="../static/js/navbarAndSidebar.js"></script>
 </body>
 
 </html>
