--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -19,7 +19,11 @@
         <div class="sidebar-main" id="sidebar-main">
             
         </div>
-        <div class="body-main"></div>
+        <div class="body-main">
+            <div class="views-vs-subscribe">
+                <img src="" alt="" srcset="">
+            </div>
+        </div>
     </div>
     <script src="../static/js/navbarAndSidebar.js"></script>
 </body>
