--- a/comments.html
+++ b/comments.html
@@ -8,8 +8,8 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
-    <link rel="stylesheet" href="/src/static/css/style.css" />
-    <link rel="stylesheet" href="/src/static/css/comments.css" />
+    <link rel="stylesheet" href="./src/static/css/style.css" />
+    <link rel="stylesheet" href="./src/static/css/comments.css" />
     <title>Document</title>
   </head>
   <body>
