--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../static/css/homepage.css">
+    <link rel="stylesheet" href="./src/static/css/homepage.css">
 </head>
 
 <body>
     <div class="main">
         <div class="nav-main" id="nav-main">
-            
+
         </div>
         <div class="sidebar-main" id="sidebar-main">
-            
+
         </div>
         <div class="body-main">
             <div class="views-vs-subscribe">
@@ -25,7 +25,7 @@
             </div>
         </div>
     </div>
-    <script src="../static/js/navbarAndSidebar.js"></script>
+    <script src="./src/static/js/navbarAndSidebar.js"></script>
 </body>
 
 </html>
