--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="body-main">
             <div class="views-vs-subscribe">
-                <img src="" alt="" srcset="">
+                <img src="#" alt="" srcset="">
             </div>
         </div>
     </div>
