--- a/comments.html
+++ b/comments.html
@@ -52,14 +52,125 @@
                   <option value="n">Negative Comments</option>
                 </select>
               </div>
+
+              <div class="comments-box">
+              <div class="comments-outer">
               <div class="comments">
-                <img src="/src/static/images/comments/sharukh.jpg" alt="image" />
+                <img
+                  src="/src/static/images/comments/sharukh.jpg"
+                  alt="image"
+                />
                 <div>
                   <span class="name">Sha Rukh Khan</span>
                   <span class="date">23 March</span>
                   <span class="text">This is an awsome video</span>
+                  <span id="small-icons" class="material-symbols-outlined"> thumb_up </span>
+                  <span id="small-icons" class="material-symbols-outlined"> thumb_down </span>
                 </div>
               </div>
+              <span id="delete-icon" class="material-symbols-outlined">
+                delete
+              </span>
+              </div>
+
+              
+              <div class="comments-outer">
+                <div class="comments">
+                  <img
+                    src="/src/static/images/comments/sharukh.jpg"
+                    alt="image"
+                  />
+                  <div>
+                    <span class="name">Sha Rukh Khan</span>
+                    <span class="date">23 March</span>
+                    <span class="text">This is an awsome video</span>
+                    <span id="small-icons" class="material-symbols-outlined"> thumb_up </span>
+                    <span id="small-icons" class="material-symbols-outlined"> thumb_down </span>
+                  </div>
+                </div>
+                <span id="delete-icon" class="material-symbols-outlined">
+                  delete
+                </span>
+                </div>
+
+                <div class="comments-outer">
+                  <div class="comments">
+                    <img
+                      src="/src/static/images/comments/sharukh.jpg"
+                      alt="image"
+                    />
+                    <div>
+                      <span class="name">Sha Rukh Khan</span>
+                      <span class="date">23 March</span>
+                      <span class="text">This is an awsome video</span>
+                      <span id="small-icons" class="material-symbols-outlined"> thumb_up </span>
+                      <span id="small-icons" class="material-symbols-outlined"> thumb_down </span>
+                    </div>
+                  </div>
+                  <span id="delete-icon" class="material-symbols-outlined">
+                    delete
+                  </span>
+                  </div>
+
+              <div class="comments-outer">
+              <div class="comments">
+                <img
+                  src="/src/static/images/comments/sharukh.jpg"
+                  alt="image"
+                />
+                <div>
+                  <span class="name">Sha Rukh Khan</span>
+                  <span class="date">23 March</span>
+                  <span class="text">This is an awsome video</span>
+                  <span id="small-icons" class="material-symbols-outlined"> thumb_up </span>
+                  <span id="small-icons" class="material-symbols-outlined"> thumb_down </span>
+                </div>
+              </div>
+              <span id="delete-icon" class="material-symbols-outlined">
+                delete
+              </span>
+              </div>
+
+              <div class="comments-outer">
+                <div class="comments">
+                  <img
+                    src="/src/static/images/comments/sharukh.jpg"
+                    alt="image"
+                  />
+                  <div>
+                    <span class="name">Sha Rukh Khan</span>
+                    <span class="date">23 March</span>
+                    <span class="text">This is an awsome video</span>
+                    <span id="small-icons" class="material-symbols-outlined"> thumb_up </span>
+                    <span id="small-icons" class="material-symbols-outlined"> thumb_down </span>
+                  </div>
+                </div>
+                <span id="delete-icon" class="material-symbols-outlined">
+                  delete
+                </span>
+                </div>
+
+                <div class="comments-outer">
+                  <div class="comments">
+                    <img
+                      src="/src/static/images/comments/sharukh.jpg"
+                      alt="image"
+                    />
+                    <div>
+                      <span class="name">Sha Rukh Khan</span>
+                      <span class="date">23 March</span>
+                      <span class="text">This is an awsome video</span>
+                      <span id="small-icons" class="material-symbols-outlined"> thumb_up </span>
+                      <span id="small-icons" class="material-symbols-outlined"> thumb_down </span>
+                    </div>
+                  </div>
+                  <span id="delete-icon" class="material-symbols-outlined">
+                    delete
+                  </span>
+                  </div>
+                  </div>
+
+            
             </div>
           </div>
         </div>
