sidebar navbar footer responsive done working on body

--- a/index.html
+++ b/index.html
@@ -21,9 +21,36 @@
         </div>
         <div class="body-main">
             <div class="views-vs-subscribe">
-                <img src="#" alt="" srcset="">
+                <div class="among-all-viewers">
+
+                    <span>Among All Viewers</span>
+                    <span class="min-screen">60% Subscribed, 40% Not Subscribed</span>
+                </div>
+                <div class="text">
+
+                    <span>Among All Viewers,
+                        Many viewers are not Subscribing your channel. Need to improve feedback system</span>
+                </div>
+                <img src="./src/static/images/homepage/pie.png" class="pie-image" alt="" srcset="">
+            </div>
+            <div class="views-count">
+
+                <img src="./src/static/images/homepage/bar.png" class="bar-image" alt="" srcset="">
+                <span>March</span>
+            </div>
+            
+            <div class="most-popular-videos">
+                <div class="video-item">
+                    <div class="video-thumbnail"></div>
+                    <div class="video-details">
+                        <div class="video-title"></div>
+                        <div class="video-description"></div>
+                        <div class="video-reactions"></div>
+                    </div>
+                </div>
             </div>
         </div>
+        <div class="footer-main" id="footer-main"></div>
     </div>
     <script src="./src/static/js/navbarAndSidebar.js"></script>
 </body>
