--- a/comments.html
+++ b/comments.html
@@ -8,6 +8,8 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/static/css/style.css" />
     <link rel="stylesheet" href="./src/static/css/comments.css" />
     <title>Document</title>
@@ -15,7 +17,12 @@
 
   <body>
     <div class="main">
-      <div class="nav-main"></div>
+      <div class="nav-main" id="nav-main">
+
+      </div>
+      <div class="sidebar-main" id="sidebar-main">
+
+      </div>
       <div class="thumbnail-body">
         <div class="thumbnail">
           <div class="left">
@@ -23,6 +30,16 @@
               src="./src/static/images/comments/316283970_450570717221604_8751096789457175564_n.jpg"
               alt="thumbnail"
             />
+            <div class="likes">
+              <div class="liked">
+                <span id="like" class="material-symbols-outlined"> thumb_up </span>
+                <span>842767</span>
+              </div>
+              <div class="disliked">
+              <span id="like" class="material-symbols-outlined"> thumb_up </span>
+              <span>1293</span>
+            </div>
+            </div>
           </div>
           <div class="right">
             <div class="description">
@@ -39,7 +56,7 @@
                   type="search"
                   placeholder="Search comments"
                 />
-                <span class="material-symbols-outlined"> mood </span>
+                <span id="emoji" class="material-symbols-outlined"> mood </span>
               </div>
               <div class="sort">
                 <label class="sort-label" for="select">Sort</label>
@@ -176,5 +193,7 @@
         </div>
       </div>
     </div>
+    <div class="footer-main" id="footer-main"></div>
+    <script src="./src/static/js/navbarAndSidebar.js"></script>
   </body>
 </html>
