--- a/index.html
+++ b/index.html
@@ -38,21 +38,30 @@
                 <img src="./src/static/images/homepage/bar.png" class="bar-image" alt="" srcset="">
                 <span>March</span>
             </div>
-            
-            <div class="most-popular-videos">
-                <div class="video-item">
-                    <div class="video-thumbnail"></div>
-                    <div class="video-details">
-                        <div class="video-title"></div>
-                        <div class="video-description"></div>
-                        <div class="video-reactions"></div>
-                    </div>
+            <div class="subscriber-count">
+
+                <span class="total-subscribers">10,640,012 Subscribers</span>
+                <div class="gender-respective-subscriber">
+
+                    <span class="male-subscribers">Male Subscribers 67%</span>
+                    <span class="female-subscribers">Female Subscribers 43%</span>
                 </div>
+            </div>
+            <div class="most-popular-videos">
+                <div class="most-popular-text">
+
+                    <span>Most Popular Videos</span>
+                </div>
+                <div class="video-items" id="video-items">
+
+                </div>
+
             </div>
         </div>
         <div class="footer-main" id="footer-main"></div>
     </div>
     <script src="./src/static/js/navbarAndSidebar.js"></script>
+    <script src="./src/static/js/videos.js"></script>
 </body>
 
 </html>
