--- a/subscribers.html
+++ b/subscribers.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/static/css/style.css" />
-    <link rel="stylesheet" href="./src/static/css/comments.css" />
+    <link rel="stylesheet" href="./src/static/css/subscribers.css" />
     <title>Document</title>
   </head>
 
@@ -27,7 +27,7 @@
         <div class="thumbnail">
           <div class="left">
             <img
-              src="../src/static/images/comments/316283970_450570717221604_8751096789457175564_n.jpg"
+              src="./src/static/images/comments/316283970_450570717221604_8751096789457175564_n.jpg"
               alt="thumbnail"
             />
             <div class="likes">
@@ -42,59 +42,37 @@
             </div>
           </div>
           <div class="right">
-            <div class="description">
-              <span class="video-title">Tech Storm 2.23 </span>
-              <span class="video-info"
-                >Fasten your seatbelts to hop into the journey of Kolkata's one
-                of the biggest techfest.....</span
-              >
-            </div>
             <div class="comments-section">
               <div class="input">
                 <input
                   class="search"
                   type="search"
-                  placeholder="Search comments"
+                  placeholder="Search Subscribers"
                 />
-                <span id="emoji" class="material-symbols-outlined"> mood </span>
-              </div>
-              <div class="sort">
-                <label class="sort-label" for="select">Sort</label>
-                <select name="" id="select">
-                  <option value="">Select</option>
-                  <option value="Most Recent">Most Recent</option>
-                  <option value="1">1 Month Ago</option>
-                  <option value="6">6 Months Ago</option>
-                  <option value="P">Positive Comments</option>
-                  <option value="n">Negative Comments</option>
-                </select>
               </div>
 
               <div class="comments-box">
               <div class="comments-outer">
               <div class="comments">
                 <img
-                  src="./src/static/images/comments/sharukh.jpg"
+                  src="/src/static/images/comments/sharukh.jpg"
                   alt="image"
                 />
                 <div>
                   <span class="name">Sha Rukh Khan</span>
-                  <span class="date">23 March</span>
-                  <span class="text">This is an awsome video</span>
-                  <span id="small-icons" class="material-symbols-outlined"> thumb_up </span>
-                  <span id="small-icons" class="material-symbols-outlined"> thumb_down </span>
+                  <div>
+                  <span class="mail">Email ID: </span>
+                  <span class="mail2">imsarukhkhan@gmail.com </span>
+                </div>
                 </div>
               </div>
-              <span id="delete-icon" class="material-symbols-outlined">
-                delete
-              </span>
               </div>
 
               
               <div class="comments-outer">
                 <div class="comments">
                   <img
-                    src="./src/static/images/comments/sharukh.jpg"
+                    src="/src/static/images/comments/sharukh.jpg"
                     alt="image"
                   />
                   <div>
@@ -113,7 +91,7 @@
                 <div class="comments-outer">
                   <div class="comments">
                     <img
-                      src="./src/static/images/comments/sharukh.jpg"
+                      src="/src/static/images/comments/sharukh.jpg"
                       alt="image"
                     />
                     <div>
@@ -132,7 +110,7 @@
               <div class="comments-outer">
               <div class="comments">
                 <img
-                  src="./src/static/images/comments/sharukh.jpg"
+                  src="/src/static/images/comments/sharukh.jpg"
                   alt="image"
                 />
                 <div>
@@ -151,7 +129,7 @@
               <div class="comments-outer">
                 <div class="comments">
                   <img
-                    src="./src/static/images/comments/sharukh.jpg"
+                    src="/src/static/images/comments/sharukh.jpg"
                     alt="image"
                   />
                   <div>
@@ -170,7 +148,7 @@
                 <div class="comments-outer">
                   <div class="comments">
                     <img
-                      src="./src/static/images/comments/sharukh.jpg"
+                      src="/src/static/images/comments/sharukh.jpg"
                       alt="image"
                     />
                     <div>
