--- a/comments.html
+++ b/comments.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/static/css/style.css" />
     <link rel="stylesheet" href="./src/static/css/comments.css" />
-    <title>Document</title>
+    <title>Comments</title>
   </head>
 
   <body>
@@ -36,7 +36,7 @@
                 <span>842767</span>
               </div>
               <div class="disliked">
-              <span id="like" class="material-symbols-outlined"> thumb_up </span>
+              <span id="like" class="material-symbols-outlined"> thumb_down </span>
               <span>1293</span>
             </div>
             </div>
