--- a/subscribers.html
+++ b/subscribers.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/static/css/style.css" />
     <link rel="stylesheet" href="./src/static/css/subscribers.css" />
-    <title>Document</title>
+    <title>Subscribers</title>
   </head>
 
   <body>
@@ -36,13 +36,16 @@
                 <span>842767</span>
               </div>
               <div class="disliked">
-              <span id="like" class="material-symbols-outlined"> thumb_up </span>
+              <span id="like" class="material-symbols-outlined"> thumb_down </span>
               <span>1293</span>
             </div>
             </div>
           </div>
           <div class="right">
             <div class="comments-section">
+                <div class="heading">
+                    <h1>Subscribers</h1>
+                </div>
               <div class="input">
                 <input
                   class="search"
@@ -55,7 +58,7 @@
               <div class="comments-outer">
               <div class="comments">
                 <img
-                  src="/src/static/images/comments/sharukh.jpg"
+                  src="./src/static/images/comments/sharukh.jpg"
                   alt="image"
                 />
                 <div>
@@ -68,101 +71,74 @@
               </div>
               </div>
 
+
+              <div class="comments-outer">
+                <div class="comments">
+                  <img
+                    src="./src/static/images/comments/sharukh.jpg"
+                    alt="image"
+                  />
+                  <div>
+                    <span class="name">Sha Rukh Khan</span>
+                    <div>
+                    <span class="mail">Email ID: </span>
+                    <span class="mail2">imsarukhkhan@gmail.com </span>
+                  </div>
+                  </div>
+                </div>
+                </div>
+
+
+                <div class="comments-outer">
+                    <div class="comments">
+                      <img
+                        src="./src/static/images/comments/sharukh.jpg"
+                        alt="image"
+                      />
+                      <div>
+                        <span class="name">Sha Rukh Khan</span>
+                        <div>
+                        <span class="mail">Email ID: </span>
+                        <span class="mail2">imsarukhkhan@gmail.com </span>
+                      </div>
+                      </div>
+                    </div>
+                    </div>
+
+
+
+                    <div class="comments-outer">
+                        <div class="comments">
+                          <img
+                            src="./src/static/images/comments/sharukh.jpg"
+                            alt="image"
+                          />
+                          <div>
+                            <span class="name">Sha Rukh Khan</span>
+                            <div>
+                            <span class="mail">Email ID: </span>
+                            <span class="mail2">imsarukhkhan@gmail.com </span>
+                          </div>
+                          </div>
+                        </div>
+                        </div>
+
               
               <div class="comments-outer">
                 <div class="comments">
                   <img
-                    src="/src/static/images/comments/sharukh.jpg"
+                    src="./src/static/images/comments/sharukh.jpg"
                     alt="image"
                   />
                   <div>
                     <span class="name">Sha Rukh Khan</span>
-                    <span class="date">23 March</span>
-                    <span class="text">This is an awsome video</span>
-                    <span id="small-icons" class="material-symbols-outlined"> thumb_up </span>
-                    <span id="small-icons" class="material-symbols-outlined"> thumb_down </span>
-                  </div>
-                </div>
-                <span id="delete-icon" class="material-symbols-outlined">
-                  delete
-                </span>
-                </div>
-
-                <div class="comments-outer">
-                  <div class="comments">
-                    <img
-                      src="/src/static/images/comments/sharukh.jpg"
-                      alt="image"
-                    />
                     <div>
-                      <span class="name">Sha Rukh Khan</span>
-                      <span class="date">23 March</span>
-                      <span class="text">This is an awsome video</span>
-                      <span id="small-icons" class="material-symbols-outlined"> thumb_up </span>
-                      <span id="small-icons" class="material-symbols-outlined"> thumb_down </span>
-                    </div>
+                    <span class="mail">Email ID: </span>
+                    <span class="mail2">imsarukhkhan@gmail.com </span>
                   </div>
-                  <span id="delete-icon" class="material-symbols-outlined">
-                    delete
-                  </span>
-                  </div>
-
-              <div class="comments-outer">
-              <div class="comments">
-                <img
-                  src="/src/static/images/comments/sharukh.jpg"
-                  alt="image"
-                />
-                <div>
-                  <span class="name">Sha Rukh Khan</span>
-                  <span class="date">23 March</span>
-                  <span class="text">This is an awsome video</span>
-                  <span id="small-icons" class="material-symbols-outlined"> thumb_up </span>
-                  <span id="small-icons" class="material-symbols-outlined"> thumb_down </span>
-                </div>
-              </div>
-              <span id="delete-icon" class="material-symbols-outlined">
-                delete
-              </span>
-              </div>
-
-              <div class="comments-outer">
-                <div class="comments">
-                  <img
-                    src="/src/static/images/comments/sharukh.jpg"
-                    alt="image"
-                  />
-                  <div>
-                    <span class="name">Sha Rukh Khan</span>
-                    <span class="date">23 March</span>
-                    <span class="text">This is an awsome video</span>
-                    <span id="small-icons" class="material-symbols-outlined"> thumb_up </span>
-                    <span id="small-icons" class="material-symbols-outlined"> thumb_down </span>
                   </div>
                 </div>
-                <span id="delete-icon" class="material-symbols-outlined">
-                  delete
-                </span>
                 </div>
-
-                <div class="comments-outer">
-                  <div class="comments">
-                    <img
-                      src="/src/static/images/comments/sharukh.jpg"
-                      alt="image"
-                    />
-                    <div>
-                      <span class="name">Sha Rukh Khan</span>
-                      <span class="date">23 March</span>
-                      <span class="text">This is an awsome video</span>
-                      <span id="small-icons" class="material-symbols-outlined"> thumb_up </span>
-                      <span id="small-icons" class="material-symbols-outlined"> thumb_down </span>
-                    </div>
-                  </div>
-                  <span id="delete-icon" class="material-symbols-outlined">
-                    delete
-                  </span>
-                  </div>
                   </div>
 
             
